# prototype-mc-wgpu

./: settings.gradle.kts
fabric_mod/: build.gradle.kts
fabric_mod/src/main/kotlin/net/orito_itsuki/prototype_mc_wgpu/: PrototypeMcWgpu.kt  WgpuRendererNative.kt
fabric_mod/src/main/kotlin/net/orito_itsuki/prototype_mc_wgpu/chunk/: BlockRenderer.kt  FluidRenderer.kt  RenderChunkConstructor.kt  RenderChunksManager.kt  VertexConsumerProvider.kt
fabric_mod/src/main/kotlin/net/orito_itsuki/prototype_mc_wgpu/resource/: Resource.kt  TextureResource.kt
fabric_mod/src/main/kotlin/net/orito_itsuki/prototype_mc_wgpu/rust/: FileExtractor.kt  MinecraftMesh.kt  MinecraftWorld.kt  WgpuCamera.kt  WgpuChunk.kt  WgpuCommand.kt  WgpuCommandMailbox.kt  WgpuDrawCommand.kt  WgpuMinecraftMesh.kt  WgpuRendererNative.kt  WindowSize.kt
fabric_mod/src/main/resources/: fabric.mod.json  prototype_mc_wgpu.accesswidener  prototype_mc_wgpu.mixins.json
gradle/: libs.versions.toml
wgpu_renderer/: Cargo.toml  build.gradle.kts
wgpu_renderer/src/: event.rs  lib.rs  renderer.rs  resources.rs  scene.rs  window.rs  window_size.rs
wgpu_renderer/src/renderer/: camera_buffer.rs  render_pipeline.rs  vertex.rs
wgpu_renderer/src/renderer/shader/: shader.wgsl
wgpu_renderer/src/resources/: identifier.rs  texture.rs
wgpu_renderer/src/resources/minecraft/: texture_manager.rs
wgpu_renderer/src/scene/: camera.rs  minecraft.rs  minecraft_mesh.rs  scene.rs  scene_manager.rs
wgpu_renderer/src/scene/minecraft/: minecraft_mesh.rs
(+4 files in other folders)
