[package]
name = "wgpu_renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
bytemuck = { version="1.9.1", features = ["derive"]}
env_logger = "0.9.0"
jni = "0.19.0"
log = "0.4.17"
winit = "0.26.1"

[dependencies.wgpu]
git = "https://github.com/gfx-rs/wgpu.git"
branch = "gecko"
