[package]
name = "wgpu_renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
bytemuck = { version="1.9.1", features = ["derive"]}
crevice = "0.11.0"
env_logger = "0.9.0"
jni = "0.19.0"
log = "0.4.17"
mint = "0.5.9"
once_cell = "1.12.0"
pollster = "0.2.5"
winit = "0.26.1"

[dependencies.tokio]
version = "1.19.2"
features = ["rt-multi-thread", "sync"]

[dependencies.vek]
version = "0.15.8"
features = ["mint"]

[dependencies.wgpu]
git = "https://github.com/gfx-rs/wgpu.git"
branch = "gecko"
